<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chapnameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ENTER CHAPTER NAME"
            android:textColor="@color/heading_color_blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/chapnameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/underline_color"
            android:hint="Enter new Chapter Name"
            android:textColorHint="@color/text_color_hint" />

        <TextView
            android:id="@+id/chapdescrptnTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/give_a_brief_description"
            android:textColor="@color/heading_color_blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/chapdescrptnET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/underline_color"
            android:hint="@string/enter_descrptn"
            android:textColorHint="@color/text_color_hint" />

        <TextView
            android:id="@+id/setpriceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/set_price"
            android:textColor="@color/heading_color_blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/heading_color_blue"
                android:text="@string/weekly"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:id="@+id/weeklyET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:backgroundTint="@color/underline_color"
                android:hint="@string/Rs"
                android:textColorHint="@color/text_color_hint" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/heading_color_blue"
                android:text="@string/month"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:id="@+id/monthET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:backgroundTint="@color/underline_color"
                android:hint="@string/Rs"
                android:textColorHint="@color/text_color_hint" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/heading_color_blue"
                android:text="@string/quaterly"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:id="@+id/quaterlyET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:backgroundTint="@color/underline_color"
                android:hint="@string/Rs"
                android:textColorHint="@color/text_color_hint" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/heading_color_blue"
                android:text="@string/half"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:id="@+id/halfET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:backgroundTint="@color/underline_color"
                android:hint="@string/Rs"
                android:textColorHint="@color/text_color_hint" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/heading_color_blue"
                android:text="@string/year"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:id="@+id/yearET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:backgroundTint="@color/underline_color"
                android:hint="@string/Rs"
                android:textColorHint="@color/text_color_hint" />
        </RelativeLayout>

        <Button
            android:id="@+id/updateBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UPDATE"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>